@@ -124,7 +124,7 @@ class TranslatableSingular(Translatable, FancyEqMixin):
         self.format = format
         self.args = args
 
-    def defaultMessageId(self):
+    def untranslated(self):
         return self.format % self.args
 pb.setUnjellyableForClass(TranslatableSingular, TranslatableSingular)
 
@@ -148,7 +148,7 @@ class TranslatablePlural(Translatable, FancyEqMixin):
         self.count = count
         self.args = args
 
-    def defaultMessageId(self):
+    def untranslated(self):
         return self.singular % self.args
 pb.setUnjellyableForClass(TranslatablePlural, TranslatablePlural)
 
@@ -299,10 +299,13 @@ class Message(pb.Copyable, pb.RemoteCopy, FancyEqMixin):
         self.level = level
         self.translatables = []
         self.debug = debug
-        self.id = id or translatable.defaultMessageId()
+        # FIXME: untranslated is a really poor choice of id
+        self.id = id or translatable.untranslated()
         self.priority = priority
         self.timestamp = timestamp or time.time()
-
+        # -1 is in __init__, -2 is in the subclass __init__, -3 is in the caller
+        log.doLog(log.DEBUG, None, 'messages',
+            'creating message %r', self, where=-3)
         self.add(translatable)
 
     def __repr__(self):
@@ -312,6 +315,9 @@ class Message(pb.Copyable, pb.RemoteCopy, FancyEqMixin):
         if not isinstance(translatable, Translatable):
             raise ValueError('%r is not Translatable' % translatable)
         self.translatables.append(translatable)
+        log.doLog(log.DEBUG, None, 'messages',
+            'message %r: adding %r', (id(self), translatable.untranslated()),
+             where=-2)
 
 pb.setUnjellyableForClass(Message, Message)
 
